# 3rd_imdc_purdue_neuralearth

./: .gitattributes  .gitignore  MODEL_CARD.md  Makefile  README.md  RESULTS.md  SUBMISSION_GUIDE.md  email-communication.md  environment.lock.yml  environment.yml  pyproject.toml  requirements-freeze.txt
data/raw/data_imdc_2026/: CHECKSUMS.sha256  map_regional_health.csv  shape_macroregional_health.gpkg  shape_muni.gpkg  shape_regional_health.gpkg
docs/: IMPROVEMENTS.md  PLAN.md
notebooks/: 00_data_audit.ipynb  01_eda_dengue_chik.ipynb  02_eda_climate_ocean_access.ipynb
paper/: imdc_paper.tex  imdc_paper_SI.tex
reports/: data_findings_report.tex  modeling_results_report.tex
results/metrics/: baselines_leaderboard.csv  baselines_leaderboard_by_fold.csv  baselines_scored.csv  chik_final_leaderboard.csv  combined_leaderboard.csv  combined_leaderboard_by_fold.csv  conformal_factors.csv  final_leaderboard.csv  final_leaderboard_by_fold.csv  final_leaderboard_normalized.csv  gru_scored.csv  lgbm_scored.csv  mechanistic_scored.csv
scripts/: generate_fold4.py  make_figures.py  make_manifest.py  make_paper_tier1_figs.py  paper_tier1_stats.py
src/imdc/: config.py
src/imdc/data/: aggregate.py  folds.py  loaders.py  validate.py
src/imdc/evaluation/: baselines.py  harness.py  metrics.py  postprocess.py  (+2 more)
tests/: test_determinism.py  test_dl_sequence.py  test_ensemble.py  test_folds_and_leakage.py  test_harness_baselines.py  test_hierarchical.py  test_mechanistic.py  test_metrics.py  test_ml_boosted.py  test_panel_leakage.py  test_persistence.py  test_postprocess.py
(+251 files in other folders)
