[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "imdc"
version = "0.1.0"
description = "IMDC 2026 dengue/chikungunya forecasting pipeline"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "xgboost",
    "lightgbm",
    "geopandas",
    "pyarrow",
    "matplotlib",
    "seaborn",
    "plotly",
    "mosqlient",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
